<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>edu_nav2_example_py</name>
  <version>1.0.0</version>
  <description>Uses Simple Commander API to task robot to drive to three target poses via Nav2</description>
  <maintainer email="david.kiesel@eudart-robotik.com">David Kiesel</maintainer>
  <license>BSD3</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>edu_robot</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
